--- a/Basketball FRVR.html
+++ b/Basketball FRVR.html
@@ -316,14 +316,13 @@ h1 {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
   z-index: 10;
-  opacity: 0;
-  transition: opacity var(--transition-medium);
+  opacity: 1;
+  pointer-events: none;
 }
 
-.game-frame-wrapper:hover .controls {
-  opacity: 1;
+.controls > * {
+  pointer-events: auto;
 }
 
 .icon-btn {
@@ -910,116 +909,181 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
-      </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Baldi’s Basics.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
-        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
-      </div>
-      <div class="card-title">Baldi’s Basics</div>
-    </a><a href="Dunk Shot.html" class="game-card">
+      <a href="Dunk Shot.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
         <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
       </div>
       <div class="card-title">Dunk Shot</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
       </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
-      </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
-      </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Bad Parenting.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
-      </div>
-      <div class="card-title">Bad Parenting</div>
-    </a><a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
-      </div>
-      <div class="card-title">Bouncemasters</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
-      </div>
-      <div class="card-title">Blackjack</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
-      </div>
-      <div class="card-title">Bit Planes</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
-      </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
-      </div>
-      <div class="card-title">Age Of War</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
-      </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
-    </a><a href="Bob The Robber .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber </div>
-    </a><a href="Ages of Conflict.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
-        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
-      </div>
-      <div class="card-title">Ages of Conflict</div>
-    </a><a href="BTD5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
-        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
-      </div>
-      <div class="card-title">BTD5</div>
-    </a><a href="Bloodmoney 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
-      </div>
-      <div class="card-title">Bloodmoney 2</div>
+      <div class="card-title">Elastic Face</div>
     </a><a href="Bitlife.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
         <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
       </div>
       <div class="card-title">Bitlife</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+    </a><a href="CS Go Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
+        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
       </div>
-      <div class="card-title">Bloxorz</div>
+      <div class="card-title">CS Go Clicker</div>
+    </a><a href="Deadly Descent.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
+        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
+      </div>
+      <div class="card-title">Deadly Descent</div>
+    </a><a href="Bob The Robber .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber </div>
+    </a><a href="Bob The Robber 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 2</div>
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      </div>
+      <div class="card-title">Ink Game</div>
+    </a><a href="Crank It!.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
+        <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
+      </div>
+      <div class="card-title">Crank It!</div>
+    </a><a href="Hover Race Drive.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
+      </div>
+      <div class="card-title">Hover Race Drive</div>
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 3</div>
+    </a><a href="Crossy Road.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
+        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
+      </div>
+      <div class="card-title">Crossy Road</div>
+    </a><a href="Friday Night Funkin.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
+        <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin" loading="lazy">
+      </div>
+      <div class="card-title">Friday Night Funkin</div>
+    </a><a href="Grindcraft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
+        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
+      </div>
+      <div class="card-title">Grindcraft</div>
+    </a><a href="Crazy Motorcycle.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Motorcycle</div>
+    </a><a href="Gun Spin.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
+        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
+      </div>
+      <div class="card-title">Gun Spin</div>
+    </a><a href="Ages of Conflict.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
+      </div>
+      <div class="card-title">Ages of Conflict</div>
+    </a><a href="FNAF 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 1</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      </div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="Blaze Drifter.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
+        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
+      </div>
+      <div class="card-title">Blaze Drifter</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+      </div>
+      <div class="card-title">Hanger 2</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
+      </div>
+      <div class="card-title">Escape Road </div>
+    </a><a href="Doki Doki Literature Club.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
+      </div>
+      <div class="card-title">Doki Doki Literature Club</div>
+    </a><a href="Going Balls.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+      </div>
+      <div class="card-title">Going Balls</div>
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
+      </div>
+      <div class="card-title">Drift Boss</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
+    </a><a href="Bouncy Motors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
+      </div>
+      <div class="card-title">Bouncy Motors</div>
+    </a><a href="FNAF Sister Location.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Sister Location</div>
+    </a><a href="Bloodmoney .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      </div>
+      <div class="card-title">Bloodmoney </div>
+    </a><a href="Highway Racer.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
+        <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer" loading="lazy">
+      </div>
+      <div class="card-title">Highway Racer</div>
+    </a><a href="Block Blast.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
+        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+      </div>
+      <div class="card-title">Block Blast</div>
+    </a><a href="Bloodmoney 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
+      </div>
+      <div class="card-title">Bloodmoney 2</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
+      </div>
+      <div class="card-title">Bad Parenting</div>
+    </a><a href="Drift Hunters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
+        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
+      </div>
+      <div class="card-title">Drift Hunters</div>
+    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
+      </div>
+      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
     </a>
     </div>
   </div>
