--- a/Cookie Clicker.html
+++ b/Cookie Clicker.html
@@ -316,14 +316,13 @@ h1 {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
   z-index: 10;
-  opacity: 0;
-  transition: opacity var(--transition-medium);
+  opacity: 1;
+  pointer-events: none;
 }
 
-.game-frame-wrapper:hover .controls {
-  opacity: 1;
+.controls > * {
+  pointer-events: auto;
 }
 
 .icon-btn {
@@ -910,116 +909,181 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Bloodmoney 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
-      </div>
-      <div class="card-title">Bloodmoney 2</div>
-    </a><a href="Capybara Clicker.html" class="game-card">
+      <a href="Capybara Clicker.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
         <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
       </div>
       <div class="card-title">Capybara Clicker</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
+    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
       </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
-      </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="BTD5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
-        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
-      </div>
-      <div class="card-title">BTD5</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
-      </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
-      </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Bad Parenting.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
-      </div>
-      <div class="card-title">Bad Parenting</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
-      </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Bob The Robber .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber </div>
+      <div class="card-title">Henry Stickmin Escaping The Prison</div>
     </a><a href="1v1.lol.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
         <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
       <div class="card-title">1v1.lol</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
+    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
       </div>
-      <div class="card-title">Bit Planes</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      <div class="card-title">Burrito Bison Launcha Libre</div>
+    </a><a href="Crazy Cattle 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+      <div class="card-title">Crazy Cattle 3D</div>
+    </a><a href="10 Minutes Till Dawn.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
+        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
       </div>
-      <div class="card-title">Age Of War</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
-    </a><a href="Bitlife.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
-        <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
-      </div>
-      <div class="card-title">Bitlife</div>
+      <div class="card-title">10 Minutes Till Dawn</div>
     </a><a href="Baldi’s Basics.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
         <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
       </div>
       <div class="card-title">Baldi’s Basics</div>
+    </a><a href="Deadly Descent.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
+        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
+      </div>
+      <div class="card-title">Deadly Descent</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="FNAF 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 2</div>
     </a><a href="Ages of Conflict.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
         <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
       </div>
       <div class="card-title">Ages of Conflict</div>
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      </div>
+      <div class="card-title">Ink Game</div>
+    </a><a href="Granny.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
+        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+      </div>
+      <div class="card-title">Granny</div>
     </a><a href="Basketball FRVR.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
         <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
       </div>
       <div class="card-title">Basketball FRVR</div>
-    </a><a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
+    </a><a href="Cut the Rope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
+        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
       </div>
-      <div class="card-title">Blackjack</div>
+      <div class="card-title">Cut the Rope</div>
+    </a><a href="Bit Planes.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
+        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
+      </div>
+      <div class="card-title">Bit Planes</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      </div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="Drift Hunters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
+        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
+      </div>
+      <div class="card-title">Drift Hunters</div>
+    </a><a href="Burger and Frights.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      </div>
+      <div class="card-title">Burger and Frights</div>
+    </a><a href="Friday Night Funkin.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
+        <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin" loading="lazy">
+      </div>
+      <div class="card-title">Friday Night Funkin</div>
+    </a><a href="Clear Vision 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
+        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 5</div>
+    </a><a href="Bloodmoney .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      </div>
+      <div class="card-title">Bloodmoney </div>
+    </a><a href="Bouncy Motors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
+      </div>
+      <div class="card-title">Bouncy Motors</div>
+    </a><a href="Bob The Robber 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 5</div>
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
+      </div>
+      <div class="card-title">Gold Digger FRVR</div>
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
+      </div>
+      <div class="card-title">Drift Boss</div>
+    </a><a href="Age Of War.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
+        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+      </div>
+      <div class="card-title">Age Of War</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      </div>
+      <div class="card-title">Earth Taken</div>
+    </a><a href="Bob The Robber 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 2</div>
+    </a><a href="BTD5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
+        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+      </div>
+      <div class="card-title">BTD5</div>
+    </a><a href="Extreme Run 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
+        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+      </div>
+      <div class="card-title">Extreme Run 3D</div>
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
+      </div>
+      <div class="card-title">Elastic Face</div>
+    </a><a href="Henry Stickmin Infiltrating The Airship.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
     </a>
     </div>
   </div>
